<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:background="@drawable/image"
    tools:context=".MainActivity">


    <TextView
        android:id="@+id/textViewtr"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_marginBottom="30dp"
        android:fontFamily="casual"
        android:text="@string/technical_round"
        android:textColor="#000000"
        android:textSize="25sp"
        android:textStyle="bold" />
    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:background="@color/white"
        android:layout_marginEnd="20dp"
        app:cardCornerRadius="8dp"
        app:cardElevation="5dp"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp" >

            <TextView
                android:id="@+id/textwelcome"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="Welcome To The Round"
                android:textColor="#78909C"
                android:textSize="30sp"
                android:fontFamily="casual"
                android:textStyle="bold" />


            <EditText
                android:id="@+id/name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:hint="@string/enter_your_name"
                android:gravity="center"
                android:autofillHints="name"
                android:textColor="@color/grey"
                android:background="@drawable/nameback"
                android:inputType="text" />
            <Button
                android:id="@+id/submitButton"
                android:layout_width="match_parent"
                android:layout_marginTop="20dp"
                android:layout_height="wrap_content"
                android:text="@string/submit"
                android:textStyle="bold"
                android:textSize="20sp"
                android:fontFamily="casual"
                android:background="@drawable/submitbtn"
                />
        </LinearLayout>
    </androidx.cardview.widget.CardView>
</androidx.appcompat.widget.LinearLayoutCompat>