<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/image"
    android:orientation="vertical"
    tools:context=".quizquestion">
    <TextView
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:text="Score"
        android:fontFamily="casual"
        android:textSize="15sp"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:gravity="center"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
            />
    <TextView
        android:id="@+id/countit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="0"
        android:fontFamily="casual"
        android:textSize="15sp"
        android:textColor="@color/black"
        android:layout_gravity="center"
        android:gravity="center"
        android:textStyle="bold"

        />
    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:background="@color/white"
        android:layout_marginEnd="20dp"
        app:cardCornerRadius="8dp"
        app:cardBackgroundColor="@color/white"
        android:layout_marginTop="20dp"
        app:cardElevation="5dp"
        android:layout_gravity="top"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="316dp"
            android:orientation="vertical"
            android:padding="16dp">

            <TextView
                android:id="@+id/question"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="10dp"
                android:fontFamily="casual"
                android:gravity="center"
                android:text="@string/empty"
                android:textColor="@color/black"
                android:textSize="25sp"
                android:textStyle="bold" />
        </LinearLayout>
    </androidx.cardview.widget.CardView>
<Button
    android:id="@+id/option1"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
   android:background="@color/grey"
    android:layout_gravity="center"
    android:text="OPTION1"
    android:layout_marginTop="10dp"
    android:layout_marginRight="20dp"
    android:layout_marginLeft="20dp"/>
    <Button
        android:id="@+id/option2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="@color/grey"
        android:layout_marginTop="10dp"
        android:text="OPTION2"
        android:layout_marginRight="20dp"
        android:layout_marginLeft="20dp"/>
    <Button
        android:id="@+id/option3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="@color/grey"
        android:layout_marginTop="10dp"
        android:layout_marginRight="20dp"
        android:text="OPTION3"
        android:layout_marginLeft="20dp"/>
    <Button
        android:id="@+id/option4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="OPTION4"
        android:background="@color/grey"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:layout_marginRight="20dp"
        android:layout_marginLeft="20dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:layout_marginTop="30dp">

        <Button
            android:id="@+id/submit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginRight="10dp"
            android:layout_marginLeft="10dp"
            android:text="@string/submit" />

        <Button
            android:id="@+id/NEXT"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginRight="10dp"
            android:layout_marginLeft="10dp"
            android:text="@string/next" />
    </LinearLayout>

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Button" />

</androidx.appcompat.widget.LinearLayoutCompat>